# unifast

./: .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  codecov.yml  commitlint.config.mjs  justfile  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  spec.md  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  FUNDING.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md  refactor.md
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  knip.yml  labeler.yml  release.yml  rust.yml  typescript.yml  website.yml
crates/unifast-bindings-node/: Cargo.toml  README.md
crates/unifast-bindings-node/src/: convert_options.rs  convert_result.rs  lib.rs  parse_hast.rs
crates/unifast-bindings-wasm/: Cargo.toml  README.md
crates/unifast-bindings-wasm/src/: lib.rs
crates/unifast-cli/: Cargo.toml  README.md
crates/unifast-cli/src/: args.rs  main.rs
crates/unifast-core/: Cargo.toml  README.md
crates/unifast-core/benches/: compile.rs  parse.rs
crates/unifast-core/src/: lib.rs
crates/unifast-core/src/api/: compile.rs  json_compat.rs  mod.rs  options.rs  result.rs
crates/unifast-core/src/ast/: common.rs  mod.rs
crates/unifast-core/src/ast/hast/: arena.rs  builder.rs  mod.rs  nodes.rs  selector.rs  visitor.rs
crates/unifast-core/src/ast/jsast/: nodes.rs
crates/unifast-core/src/ast/mdast/: builder.rs  nodes.rs  visitor.rs
crates/unifast-core/src/cache/: disk.rs  memory.rs  mod.rs
crates/unifast-core/src/diagnostics/: diagnostic.rs  mod.rs  render.rs  sink.rs
crates/unifast-core/src/emit/: mod.rs
crates/unifast-core/src/emit/html/: escape.rs  mod.rs  stringify.rs  void_elements.rs
crates/unifast-core/src/emit/mdx_js/: mod.rs  printer.rs  sourcemap.rs
crates/unifast-core/src/parse/: entities.rs  mod.rs
crates/unifast-core/src/parse/frontmatter/: json.rs  mod.rs  toml.rs  yaml.rs
crates/unifast-core/src/parse/gfm/: autolink.rs  footnotes.rs  mod.rs  strikethrough.rs  tables.rs  task_list.rs
crates/unifast-core/src/parse/markdown/: parser.rs
crates/unifast-core/src/parse/mdx/: esm.rs  expr.rs  jsx.rs  mod.rs
crates/unifast-core/src/transform/: mod.rs  pass.rs  phases.rs  plugin.rs  registry.rs
crates/unifast-core/src/transform/passes/: abbr.rs  accessible_emoji.rs  add_classes.rs  autolink_headings.rs  autolink_headings_pass.rs  breaks.rs  breaks_pass.rs  cjk.rs  cjk_pass.rs  cleanup_pass.rs  code_import.rs  code_import_pass.rs  code_meta.rs  comment_removal.rs  custom_heading_id.rs  definition_list.rs  definition_list_pass.rs  directive.rs  directive_pass.rs  emoji.rs  emoji_pass.rs  excerpt.rs  external_links.rs  external_links_pass.rs  github_alert.rs  github_alert_pass.rs  highlight.rs  highlight_pass.rs  html_cleanup.rs  img_lazy_loading.rs  line_number.rs  line_number_pass.rs  lower_pass.rs  math.rs  math_pass.rs  mdast_to_hast.rs  minify.rs  mod.rs  normalize.rs  normalize_pass.rs  (+19 more)
crates/unifast-core/src/util/: hash.rs  interner.rs  line_index.rs  mod.rs  small_map.rs
crates/unifast-core/tests/: corpus_test.rs
crates/unifast-core/tests/corpus/: commonmark.md  frontmatter.md  gfm.md  highlight.md  mdx.mdx  sanitize.md
docs/plans/: 2026-03-04-unifast-design.md  2026-03-04-unifast-implementation.md
scripts/: release.sh
website/: .markdownlint-cli2.jsonc  .stylelintrc.json  .textlintrc.json  astro.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
website/content/en/: index.md
website/content/en/guides/: mdx.md  mdx.mdx  react.md  react.mdx  syntax-highlighting.md  syntax-highlighting.mdx  vite.md  vite.mdx
website/content/en/introduction/: key-concepts.md  quick-start.md  quick-start.mdx  what-is-unifast.md
website/content/ja/: index.md
website/content/ja/api/: compile.md
website/plugins/: vite-plugin-example.ts  vite-plugin-meta.ts  vite-plugin-not-found.ts  vite-plugin-package-install-highlight.ts  vite-plugin-translation-status.ts
website/public/: _headers  robots.txt
website/scripts/: fetch-sponsors.ts  generate-meta.ts  prerender.ts
website/src/: compile.ts  content.d.ts  entry-server.tsx  main.tsx  navigation.ts  routeTree.gen.ts  router.tsx  virtual.d.ts
website/src/components/: DocsPageShell.tsx  GitHubIcon.tsx  PostHog.astro
website/src/components/Button/: Button.module.css  index.tsx
website/src/components/CopyButton/: CopyButton.module.css  index.tsx
website/src/components/DocContent/: DocContent.module.css  index.tsx  mdxComponents.tsx
website/src/components/Example/: Example.module.css  index.tsx
website/src/components/Footer/: Footer.module.css  index.tsx
website/src/components/LandingPage/: LandingPage.module.css  index.tsx
website/src/components/LanguageSwitcher/: LanguageSwitcher.module.css  index.tsx
website/src/components/Layout/: Layout.module.css  index.tsx
website/src/components/MobileMenu/: MobileMenu.module.css  index.tsx
website/src/components/NotFound/: NotFound.module.css  index.tsx
website/src/components/PackageInstall/: PackageInstall.module.css  index.tsx
website/src/components/ParamTable/: ParamTable.module.css  index.tsx
website/src/components/SearchDialog/: SearchDialog.module.css  index.tsx
website/src/components/Sidebar/: Sidebar.module.css  index.tsx
website/src/components/TableOfContents/: TableOfContents.module.css  index.tsx
website/src/components/ThemeToggle/: ThemeToggle.module.css  index.tsx
website/src/components/icons/: logos.tsx
website/src/data/: sponsors.json
website/src/hooks/: useSearch.ts  useTheme.ts
website/src/i18n/: index.ts
website/src/i18n/locales/: en.ts  ja.ts
website/src/layouts/: BaseLayout.astro
website/src/pages/: 404.astro  index.astro
website/src/routes/: __root.tsx  index.tsx
website/src/styles/: global.css
(+22 files in other folders)
