[workspace]
resolver = "2"
members = [
    "crates/unifast-core",
    "crates/unifast-bindings-node",
    "crates/unifast-bindings-wasm",
    "crates/unifast-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kenzwada/unifast"

[workspace.dependencies]
unifast-core = { path = "crates/unifast-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
bumpalo = { version = "3", features = ["collections"] }
clap = { version = "4", features = ["derive"] }
insta = { version = "1", features = ["yaml"] }
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
