[package]
name = "unifast-bindings-node"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
unifast-core = { workspace = true, features = ["highlight"] }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[build-dependencies]
napi-build = "2"
