[package]
name = "unifast-bindings-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unifast-core = { workspace = true }
wasm-bindgen = "0.2"

[lints]
workspace = true
