[package]
name = "unifast-bindings-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unifast-core = { workspace = true }
wasm-bindgen = "0.2"

[lints]
workspace = true
