[package]
name = "unifast-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
unifast-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
