[package]
name = "unifast-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
unifast-core = { workspace = true, features = ["highlight"] }
clap = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true
