[package]
name = "unifast-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
bumpalo = { workspace = true }
syntect = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[[bench]]
name = "compile"
harness = false

[[bench]]
name = "parse"
harness = false
