[package]
name = "unifast-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
bumpalo = { workspace = true }
syntect = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-markdown = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-yaml = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-lua = { workspace = true }
# tree-sitter-kotlin = { workspace = true } # TODO: incompatible tree-sitter version
tree-sitter-scala = { workspace = true }
tree-sitter-zig = { workspace = true }
tree-sitter-elixir = { workspace = true }
tree-sitter-ocaml = { workspace = true }
tree-sitter-r = { workspace = true }
tree-sitter-cmake = { workspace = true }
# tree-sitter-dockerfile = { workspace = true } # TODO: incompatible tree-sitter version
tree-sitter-make = { workspace = true }
tree-sitter-nix = { workspace = true }
tree-sitter-regex = { workspace = true }
tree-sitter-erlang = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
insta = { workspace = true }

[[bench]]
name = "compile"
harness = false

[[bench]]
name = "parse"
harness = false
